bindings/c/include/xtreme3d.h

__declspec(dllimport) double FreeformBuildOctree(double);
__declspec(dllimport) double FreeformMeshFaceGroupGetLightmapIndex(double, double, double);
__declspec(dllimport) double FreeformMeshFaceGroupSetLightmapIndex(double, double, double, double);
__declspec(dllimport) double FreeformSetMaterialLibraries(double, double, double);
__declspec(dllimport) double BaseMeshBuildSilhouetteConnectivityData(double);
/* grid.pas */
__declspec(dllimport) double GridCreate(double, double, double, double, double);
__declspec(dllimport) double GridSetLineStyle(double, double);
__declspec(dllimport) double GridSetLineSmoothing(double, double);
__declspec(dllimport) double GridSetParts(double, double);
__declspec(dllimport) double GridSetColor(double, double, double);
__declspec(dllimport) double GridSetSize(double, double);
__declspec(dllimport) double GridSetPattern(double, double);
__declspec(dllimport) double GridSetTile(double, double, double, double);
__declspec(dllimport) double GridSetStep(double, double);
/* hudshapes.pas */
__declspec(dllimport) double HUDShapeRectangleCreate(double, double, double);
__declspec(dllimport) double HUDShapeCircleCreate(double, double, double, double, double);
__declspec(dllimport) double HUDShapeLineCreate(double, double, double, double, double);
__declspec(dllimport) double HUDShapeMeshCreate(double);
__declspec(dllimport) double HUDShapeSetRotation(double, double);
__declspec(dllimport) double HUDShapeRotate(double, double);
__declspec(dllimport) double HUDShapeSetColor(double, double, double);
__declspec(dllimport) double HUDShapeSetOrigin(double, double, double);
__declspec(dllimport) double HUDShapeSetSize(double, double, double);
__declspec(dllimport) double HUDShapeScale(double, double, double);
__declspec(dllimport) double HUDShapeCircleSetRadius(double, double);
__declspec(dllimport) double HUDShapeCircleSetSlices(double, double);
__declspec(dllimport) double HUDShapeCircleSetAngles(double, double, double);
__declspec(dllimport) double HUDShapeLineSetPoints(double, double, double, double, double);
__declspec(dllimport) double HUDShapeLineSetWidth(double, double);
__declspec(dllimport) double HUDShapeMeshAddVertex(double, double, double, double, double);
__declspec(dllimport) double HUDShapeMeshAddTriangle(double, double, double, double);
__declspec(dllimport) double HUDShapeMeshSetVertex(double, double, double, double);
__declspec(dllimport) double HUDShapeMeshSetTexCoord(double, double, double, double);
/* input.pas */
__declspec(dllimport) double MouseGetPositionX(void);
__declspec(dllimport) double MouseGetPositionY(void);
__declspec(dllimport) double MouseSetPosition(double, double);
__declspec(dllimport) double MouseShowCursor(double);
__declspec(dllimport) double KeyIsPressed(double);
__declspec(dllimport) double MouseIsPressed(double);
/* kraft.pas */
__declspec(dllimport) double KraftCreate(void);
__declspec(dllimport) double KraftStep(double, double);
__declspec(dllimport) double KraftGetRayHitPosition(double);
__declspec(dllimport) double KraftGetRayHitNormal(double);
__declspec(dllimport) double KraftCreateRigidBody(double, double);
__declspec(dllimport) double KraftRigidBodyFinish(double);
__declspec(dllimport) double KraftRigidBodySetGravity(double, double, double, double, double);
__declspec(dllimport) double KraftRigidBodySetPosition(double, double, double, double);
__declspec(dllimport) double KraftRigidBodyGetPosition(double, double);
__declspec(dllimport) double KraftRigidBodySetLinearVelocity(double, double, double, double);
__declspec(dllimport) double KraftRigidBodyGetLinearVelocity(double, double);
__declspec(dllimport) double KraftRigidBodySetRotation(double, double, double, double);
__declspec(dllimport) double KraftRigidBodyGetDirection(double, double);
__declspec(dllimport) double KraftRigidBodyGetUp(double, double);