bindings/python3/xtreme3d/x3dfuncs.py


x3d.FreeformBuildOctree.argtypes = [ctypes.c_double]
x3d.FreeformBuildOctree.restype = ctypes.c_double
def FreeformBuildOctree(aFf):
    return x3d.FreeformBuildOctree(aFf)

x3d.FreeformMeshFaceGroupGetLightmapIndex.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshFaceGroupGetLightmapIndex.restype = ctypes.c_double
def FreeformMeshFaceGroupGetLightmapIndex(aFf, aMesh, aFg):
    return x3d.FreeformMeshFaceGroupGetLightmapIndex(aFf, aMesh, aFg)

x3d.FreeformMeshFaceGroupSetLightmapIndex.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformMeshFaceGroupSetLightmapIndex.restype = ctypes.c_double
def FreeformMeshFaceGroupSetLightmapIndex(aFf, aMesh, aFg, aIndex):
    return x3d.FreeformMeshFaceGroupSetLightmapIndex(aFf, aMesh, aFg, aIndex)

x3d.FreeformSetMaterialLibraries.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FreeformSetMaterialLibraries.restype = ctypes.c_double
def FreeformSetMaterialLibraries(aFf, aMatlib, aLmmatlib):
    return x3d.FreeformSetMaterialLibraries(aFf, aMatlib, aLmmatlib)

x3d.BaseMeshBuildSilhouetteConnectivityData.argtypes = [ctypes.c_double]
x3d.BaseMeshBuildSilhouetteConnectivityData.restype = ctypes.c_double
def BaseMeshBuildSilhouetteConnectivityData(aObj):
    return x3d.BaseMeshBuildSilhouetteConnectivityData(aObj)


# grid.pas
x3d.GridCreate.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.GridCreate.restype = ctypes.c_double
def GridCreate(aX, aY, aZ, aStep, aParent):
    return x3d.GridCreate(aX, aY, aZ, aStep, aParent)

x3d.GridSetLineStyle.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.GridSetLineStyle.restype = ctypes.c_double
def GridSetLineStyle(aGrid, aMode):
    return x3d.GridSetLineStyle(aGrid, aMode)

x3d.GridSetLineSmoothing.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.GridSetLineSmoothing.restype = ctypes.c_double
def GridSetLineSmoothing(aGrid, aMode):
    return x3d.GridSetLineSmoothing(aGrid, aMode)

x3d.GridSetParts.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.GridSetParts.restype = ctypes.c_double
def GridSetParts(aGrid, aMode):
    return x3d.GridSetParts(aGrid, aMode)

x3d.GridSetColor.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.GridSetColor.restype = ctypes.c_double
def GridSetColor(aGrid, aColor, aAlpha):
    return x3d.GridSetColor(aGrid, aColor, aAlpha)

x3d.GridSetSize.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.GridSetSize.restype = ctypes.c_double
def GridSetSize(aGrid, aSize):
    return x3d.GridSetSize(aGrid, aSize)

x3d.GridSetPattern.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.GridSetPattern.restype = ctypes.c_double
def GridSetPattern(aGrid, aPattern):
    return x3d.GridSetPattern(aGrid, aPattern)

x3d.GridSetTile.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.GridSetTile.restype = ctypes.c_double
def GridSetTile(aGrid, aX, aY, aZ):
    return x3d.GridSetTile(aGrid, aX, aY, aZ)

x3d.GridSetStep.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.GridSetStep.restype = ctypes.c_double
def GridSetStep(aGrid, aStep):
    return x3d.GridSetStep(aGrid, aStep)


# hudshapes.pas
x3d.HUDShapeRectangleCreate.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.HUDShapeRectangleCreate.restype = ctypes.c_double
def HUDShapeRectangleCreate(aW, aH, aParent):
    return x3d.HUDShapeRectangleCreate(aW, aH, aParent)

x3d.HUDShapeCircleCreate.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.HUDShapeCircleCreate.restype = ctypes.c_double
def HUDShapeCircleCreate(aRadius, aSlices, aStartang, aEndang, aParent):
    return x3d.HUDShapeCircleCreate(aRadius, aSlices, aStartang, aEndang, aParent)

x3d.HUDShapeLineCreate.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.HUDShapeLineCreate.restype = ctypes.c_double
def HUDShapeLineCreate(aX1, aY1, aX2, aY2, aParent):
    return x3d.HUDShapeLineCreate(aX1, aY1, aX2, aY2, aParent)

x3d.HUDShapeMeshCreate.argtypes = [ctypes.c_double]
x3d.HUDShapeMeshCreate.restype = ctypes.c_double
def HUDShapeMeshCreate(aParent):
    return x3d.HUDShapeMeshCreate(aParent)

x3d.HUDShapeSetRotation.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.HUDShapeSetRotation.restype = ctypes.c_double
def HUDShapeSetRotation(aShape, aAngle):
    return x3d.HUDShapeSetRotation(aShape, aAngle)

x3d.HUDShapeRotate.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.HUDShapeRotate.restype = ctypes.c_double
def HUDShapeRotate(aShape, aAngle):
    return x3d.HUDShapeRotate(aShape, aAngle)

x3d.HUDShapeSetColor.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.HUDShapeSetColor.restype = ctypes.c_double
def HUDShapeSetColor(aShape, aCol, aAlpha):
    return x3d.HUDShapeSetColor(aShape, aCol, aAlpha)

x3d.HUDShapeSetOrigin.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.HUDShapeSetOrigin.restype = ctypes.c_double
def HUDShapeSetOrigin(aShape, aX, aY):
    return x3d.HUDShapeSetOrigin(aShape, aX, aY)

x3d.HUDShapeSetSize.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.HUDShapeSetSize.restype = ctypes.c_double
def HUDShapeSetSize(aShape, aW, aH):
    return x3d.HUDShapeSetSize(aShape, aW, aH)

x3d.HUDShapeScale.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.HUDShapeScale.restype = ctypes.c_double
def HUDShapeScale(aShape, aU, aV):
    return x3d.HUDShapeScale(aShape, aU, aV)

x3d.HUDShapeCircleSetRadius.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.HUDShapeCircleSetRadius.restype = ctypes.c_double
def HUDShapeCircleSetRadius(aShape, aRadius):
    return x3d.HUDShapeCircleSetRadius(aShape, aRadius)

x3d.HUDShapeCircleSetSlices.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.HUDShapeCircleSetSlices.restype = ctypes.c_double
def HUDShapeCircleSetSlices(aShape, aSlices):
    return x3d.HUDShapeCircleSetSlices(aShape, aSlices)

x3d.HUDShapeCircleSetAngles.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.HUDShapeCircleSetAngles.restype = ctypes.c_double
def HUDShapeCircleSetAngles(aShape, aStartang, aEndang):
    return x3d.HUDShapeCircleSetAngles(aShape, aStartang, aEndang)

x3d.HUDShapeLineSetPoints.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.HUDShapeLineSetPoints.restype = ctypes.c_double
def HUDShapeLineSetPoints(aShape, aX1, aY1, aX2, aY2):
    return x3d.HUDShapeLineSetPoints(aShape, aX1, aY1, aX2, aY2)

x3d.HUDShapeLineSetWidth.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.HUDShapeLineSetWidth.restype = ctypes.c_double
def HUDShapeLineSetWidth(aShape, aW):
    return x3d.HUDShapeLineSetWidth(aShape, aW)

x3d.HUDShapeMeshAddVertex.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.HUDShapeMeshAddVertex.restype = ctypes.c_double
def HUDShapeMeshAddVertex(aShape, aX, aY, aU, aV):
    return x3d.HUDShapeMeshAddVertex(aShape, aX, aY, aU, aV)

x3d.HUDShapeMeshAddTriangle.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.HUDShapeMeshAddTriangle.restype = ctypes.c_double
def HUDShapeMeshAddTriangle(aShape, aV1, aV2, aV3):
    return x3d.HUDShapeMeshAddTriangle(aShape, aV1, aV2, aV3)

x3d.HUDShapeMeshSetVertex.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.HUDShapeMeshSetVertex.restype = ctypes.c_double
def HUDShapeMeshSetVertex(aShape, aIndex, aX, aY):
    return x3d.HUDShapeMeshSetVertex(aShape, aIndex, aX, aY)

x3d.HUDShapeMeshSetTexCoord.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.HUDShapeMeshSetTexCoord.restype = ctypes.c_double
def HUDShapeMeshSetTexCoord(aShape, aIndex, aU, aV):
    return x3d.HUDShapeMeshSetTexCoord(aShape, aIndex, aU, aV)


# input.pas
x3d.MouseGetPositionX.argtypes = []
x3d.MouseGetPositionX.restype = ctypes.c_double
def MouseGetPositionX():
    return x3d.MouseGetPositionX()

x3d.MouseGetPositionY.argtypes = []
x3d.MouseGetPositionY.restype = ctypes.c_double
def MouseGetPositionY():
    return x3d.MouseGetPositionY()

x3d.MouseSetPosition.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.MouseSetPosition.restype = ctypes.c_double
def MouseSetPosition(aMx, aMy):
    return x3d.MouseSetPosition(aMx, aMy)

x3d.MouseShowCursor.argtypes = [ctypes.c_double]
x3d.MouseShowCursor.restype = ctypes.c_double
def MouseShowCursor(aMode):
    return x3d.MouseShowCursor(aMode)

x3d.KeyIsPressed.argtypes = [ctypes.c_double]
x3d.KeyIsPressed.restype = ctypes.c_double
def KeyIsPressed(aKey):
    return x3d.KeyIsPressed(aKey)

x3d.MouseIsPressed.argtypes = [ctypes.c_double]
x3d.MouseIsPressed.restype = ctypes.c_double
def MouseIsPressed(aBtn):
    return x3d.MouseIsPressed(aBtn)


# kraft.pas
x3d.KraftCreate.argtypes = []
x3d.KraftCreate.restype = ctypes.c_double
def KraftCreate():
    return x3d.KraftCreate()

x3d.KraftStep.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftStep.restype = ctypes.c_double
def KraftStep(aKr, aDt):
    return x3d.KraftStep(aKr, aDt)

x3d.KraftGetRayHitPosition.argtypes = [ctypes.c_double]
x3d.KraftGetRayHitPosition.restype = ctypes.c_double
def KraftGetRayHitPosition(aIndex):
    return x3d.KraftGetRayHitPosition(aIndex)

x3d.KraftGetRayHitNormal.argtypes = [ctypes.c_double]
x3d.KraftGetRayHitNormal.restype = ctypes.c_double
def KraftGetRayHitNormal(aIndex):
    return x3d.KraftGetRayHitNormal(aIndex)

x3d.KraftCreateRigidBody.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftCreateRigidBody.restype = ctypes.c_double
def KraftCreateRigidBody(aKr, aTyp):
    return x3d.KraftCreateRigidBody(aKr, aTyp)

x3d.KraftRigidBodyFinish.argtypes = [ctypes.c_double]
x3d.KraftRigidBodyFinish.restype = ctypes.c_double
def KraftRigidBodyFinish(aKrb):
    return x3d.KraftRigidBodyFinish(aKrb)

x3d.KraftRigidBodySetGravity.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftRigidBodySetGravity.restype = ctypes.c_double
def KraftRigidBodySetGravity(aKrb, aX, aY, aZ, aScale):
    return x3d.KraftRigidBodySetGravity(aKrb, aX, aY, aZ, aScale)

x3d.KraftRigidBodySetPosition.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftRigidBodySetPosition.restype = ctypes.c_double
def KraftRigidBodySetPosition(aKrb, aX, aY, aZ):
    return x3d.KraftRigidBodySetPosition(aKrb, aX, aY, aZ)

x3d.KraftRigidBodyGetPosition.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftRigidBodyGetPosition.restype = ctypes.c_double
def KraftRigidBodyGetPosition(aKrb, aIndex):
    return x3d.KraftRigidBodyGetPosition(aKrb, aIndex)

x3d.KraftRigidBodySetLinearVelocity.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftRigidBodySetLinearVelocity.restype = ctypes.c_double
def KraftRigidBodySetLinearVelocity(aKrb, aX, aY, aZ):
    return x3d.KraftRigidBodySetLinearVelocity(aKrb, aX, aY, aZ)

x3d.KraftRigidBodyGetLinearVelocity.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftRigidBodyGetLinearVelocity.restype = ctypes.c_double
def KraftRigidBodyGetLinearVelocity(aKrb, aIndex):
    return x3d.KraftRigidBodyGetLinearVelocity(aKrb, aIndex)

x3d.KraftRigidBodySetRotation.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.KraftRigidBodySetRotation.restype = ctypes.c_double
def KraftRigidBodySetRotation(aKrb, aX, aY, aZ):
    return x3d.KraftRigidBodySetRotation(aKrb, aX, aY, aZ)

x3d.KraftRigidBodyGetDirection.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftRigidBodyGetDirection.restype = ctypes.c_double
def KraftRigidBodyGetDirection(aKrb, aIndex):
    return x3d.KraftRigidBodyGetDirection(aKrb, aIndex)

x3d.KraftRigidBodyGetUp.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.KraftRigidBodyGetUp.restype = ctypes.c_double
def KraftRigidBodyGetUp(aKrb, aIndex):
    return x3d.KraftRigidBodyGetUp(aKrb, aIndex)
